--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,7 +33,7 @@ h1 {
 }
 
 a {
-    color: #39FF14; /* Neon Green color */
+    color: #14e0ff; /* Neon Green color */
     font-size: 1.5rem; /* Increase font size for more impact */
     text-decoration: none; /* Remove underline */
     font-weight: bold; /* Make the text bold */
@@ -42,12 +42,14 @@ a {
 }
 
 a:hover {
-    color: #FF1493; /* Neon Pink color when hovered */
-    text-shadow: 0 0 5px #39FF14, 0 0 10px #39FF14, 0 0 15px #39FF14, 0 0 20px #39FF14, 0 0 25px #39FF14; /* Glowing neon text effect */
+    color: #FF1493; 
+    text-shadow: 0 0 5px #14e0ff, 0 0 10px #14e0ff, 0 0 15px #14e0ff, 0 0 20px #14e0ff, 0 0 25px #14e0ff; 
 }
 
 footer {
-    margin-top: auto; 
+    margin-top: auto;
+    text-align: center; 
+    padding: 20px; 
 }
 
 footer p {
