--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -31,8 +31,9 @@ h1 {
 }
 
 .intro-text {
+    position: relative;
     background-color: #f9f9f9;
-    padding: 20px; 
+    padding: 30px; 
     border: 5px dashed #8B4513; 
     border-radius: 8px; 
     max-width: 800px; 
@@ -42,6 +43,7 @@ h1 {
     font-family: "Playwrite NL Guides", cursive;
     font-weight: 400;
     font-style: normal;
+    background: #fff;
 }
 
 .intro-text p {
@@ -61,17 +63,15 @@ h1 {
     text-shadow: 0 0 5px rgba(255, 140, 0, 0.8);
 }
 
-
-
 .right {
     align-self: flex-end; 
     margin-left: auto; 
 }
 
 a {
-    font-size: 3rem; 
-    color: #000000;
-    text-decoration: none; 
+    font-size: 2rem; 
+    color: #0000FF;
+    text-decoration: underline; 
     transition: color 0.3s, transform 0.3s; 
 }
 
@@ -89,4 +89,16 @@ footer {
 footer p {
     font-size: 12px;
     margin: 0;
+}
+
+footer a {
+    font-family: "Playwrite NL Guides", cursive; 
+    color: black; 
+    text-decoration: underline;
+    transition: color 0.3s, transform 0.3s;
+}
+
+footer a:hover {
+    color: #ff1493; 
+    transform: scale(1.2);
 }
